TASK: Correct Styling and collapsing issues

--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTree/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTree/style.css
@@ -1,4 +1,3 @@
 .pageTree {
-    height: calc(50vh - 71px);
     overflow-y: auto;
 }
